Dynamically added buttons working on test data. Did some small improvements to CSS so that at 5 buttons show without overflowing. Need to do some more UI improvements in another PR to ensure buttons never overflow.

--- a/frontend/src/app/side-menu/side-menu.component.css
+++ b/frontend/src/app/side-menu/side-menu.component.css
@@ -17,7 +17,7 @@ limitations under the License. */
 }
 
 .sidenav {
-  width: 10%;
+  width: 20%;
 }
 
 .sidenav .mat-toolbar {
@@ -30,24 +30,6 @@ limitations under the License. */
   z-index: 1;
 }
 
-.button {
-  background: red;
-  border: none;
-  border-radius: 0 100px 100px 0;
-}
-
-.btn:hover {
-	box-shadow: 0px 0px 4px #b1b1b1;
-	background: linear-gradient(0deg, #CC360C, #DB3A0D);
-	border: 1px solid #B3320E;
-}
-
-.btn:active {
-	box-shadow: 0px 0px 4px #b1b1b1 inset;
-	background: linear-gradient(0deg, #CC360C, #DB3A0D);
-	border: 1px solid #B3320E;
-}
-
 #dashboard {
   height: 100%;
   overflow-y: hidden;
@@ -58,10 +40,6 @@ limitations under the License. */
 }
 
 #title {
-  margin-left: 5%;
-}
-
-#uploadButton {
   margin-left: 5%;
 }
 
